excelsior: Fix reservations padding on mobile

--- a/src/targets/excelsior/styles/views/reservation.less
+++ b/src/targets/excelsior/styles/views/reservation.less
@@ -970,6 +970,9 @@ reservation-finished {
     background-color: rgba(26, 26, 26, 0.8);
     .backdrop-filter-blur(20px);
     margin-bottom: 100px;
+    .viewport-mobile & {
+      margin-bottom: 20px;
+    }
 
     .summary-container {
       max-width: 1212px;
